[FER] fix InfoCard spacing (#142)

--- a/frontend/react/src/components/common/info-card/InfoCard.scss
+++ b/frontend/react/src/components/common/info-card/InfoCard.scss
@@ -17,7 +17,7 @@
     @extend %title-sm;
     position: relative;
     color: colors.$g-900;
-    padding-left: 28px;
+    padding: 4px 0 4px 28px;
 
     &::before {
       content: "";
